--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <!-- 2- this list for dashboard -->
             <li>
                 <a  class="active"href="#">
-                <i class="fas fa-home"></i> 
-                <p>Dashboard</p>
+                  <i class="fas fa-home"></i> 
+                  <p>Dashboard</p>
                 </a>   
             </li>
             <!-- 3- this list for Clients -->
@@ -123,17 +123,17 @@
             <tbody>
                 <tr>
                     <td>tv</td>
-                    <td><span class="price">255$</span></td>
+                    <td class="price">255$</td>
                     <td>7</td>
                 </tr>
                 <tr>
                     <td>laptop</td>
-                    <td><span class="price">1200$</span></td>
+                    <td class="price">1200$</td>
                     <td>18</td>
                 </tr>
                 <tr>
                     <td>phone</td>
-                    <td><span class="price">350$</span></td>
+                    <td class="price">350$</td>
                     <td>7</td>
                 </tr>
             </tbody>
